modules: apollo : z-index fixed

--- a/modules/menu.scss
+++ b/modules/menu.scss
@@ -27,6 +27,7 @@ $apollo-menu_expand_item_icon_margin: 1.6rem 1.2rem 1.6rem 0;
 	bottom: 0;
 	left: 0;
 	width: 100vw;
+	z-index: 100;
 	.page-actions {
 		align-items: center;
 		background-color: $apollo-menu_background;
